<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp"
    android:padding="4dp"
    app:cardElevation="4dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textSize="20sp"
            android:padding="4dp"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity"
            android:id="@+id/tvPopularity"
            android:textSize="18sp"
            android:padding="4dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_low_to_high"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:id="@+id/tvPriceLowToHigh"
            android:padding="4dp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_high_to_low"
            android:id="@+id/tvPriceHighToLow"
            android:textSize="18sp"
            android:padding="4dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:id="@+id/tvRatingHighToLow"
            android:text="@string/rating_high_to_low"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black" />

    </LinearLayout>


</androidx.cardview.widget.CardView>